--- a/templates/top_page.html
+++ b/templates/top_page.html
@@ -104,7 +104,7 @@
               {% elif 'shw.in' in logo_keyword %}
                 <img class="logo-img" src="{{ url_for('static', filename='img/SHW.jpg') }}" alt="SHW ロゴ">
               {% else %}
-                <div class="no-image">画像なし</div>
+                <div class="no-image">No image</div>
               {% endif %}
             </div>
             <div class="music-info-container">
@@ -132,11 +132,11 @@
               <div class="music-details-container" id="music-details-{{ music[0] }}">
                 <div class="details-box">
                   <div class="tooltip"></div>
-                  {% if music[12] != None %}
-                    <p>{{ music[12] }}</p>
-                  {% else %}
-                    <p>利用可能なタグはありません。</p>
-                  {% endif %}
+                    {% if music[12] != None %}
+                      <p>{{ music[12] }}</p>
+                    {% else %}
+                      <p>利用可能なタグはありません。</p>
+                    {% endif %}
                   <br>
                   <p>{{ music[3] }}</p>
                   <br>
@@ -158,6 +158,7 @@
                   <span>N/A</span>
                 {% endif %}
               </a>
+
             </div>
           </li>
         </div>
