--- a/templates/user_top.html
+++ b/templates/user_top.html
@@ -95,22 +95,19 @@
               <div class="music-details-container" id="music-details-{{ music[0] }}">
                 <div class="details-box">
                   <div class="tooltip"></div>
-                  <p>
-                  {% if music[13] != None%}
-                    <p>{{music[13]}}</p>
-                  {% else %}
-                    <p>利用可能なタグはありません。</p>
-                  {% endif %}
-                  </p>
+                    {% if music[13] != None%}
+                      <p>{{music[13]}}</p>
+                    {% else %}
+                      <p>利用可能なタグはありません。</p>
+                    {% endif %}
                   <br>
                   <p>{{ music[3] }}</p>
-                  <br>
                   <br>
                 </div>
               </div>
             </div>
             <div class="music-actions">
-              <a href="{{ url_for('review', music_id=music[0]) }}" class="review">評価
+              <a href="{{ url_for('review', music_id=music[0]) }}" class="review">評価<br>
                 {% if average_ratings and music[0] in average_ratings %}
                   <span>{{ average_ratings[music[0]] | round(1) }}/5</span>
                 {% else %}
@@ -186,13 +183,11 @@
               <div class="music-details-container" id="music-details-{{ music[0] }}">
                 <div class="details-box">
                   <div class="tooltip"></div>
-                  <p>
-                  {% if music[12] != None %}
-                    <p>{{music[12]}}</p>
-                  {% else %}
-                    <p>利用可能なタグはありません。</p>
-                  {% endif %}
-                  </p>
+                    {% if music[12] != None %}
+                      <p>{{music[12]}}</p>
+                    {% else %}
+                      <p>利用可能なタグはありません。</p>
+                    {% endif %}
                   <br>
                   <p>{{ music[3] }}</p>
                   <br>
@@ -200,20 +195,20 @@
               </div>
             </div>
             <div class="music-actions">
-              <a href="{{ url_for('review', music_id=music[0]) }}" class="review">評価 
+              <a href="{{ url_for('review', music_id=music[0]) }}" class="review">評価 <br>
                 {% if average_ratings and music[0] in average_ratings %}
                   <span>{{ average_ratings[music[0]] | round(1) }}/5</span>
                 {% else %}
                   <span>-/5</span>
                 {% endif %}
               </a>
-              <div class="download-action">
+              <a class="download-action">
                 {% if music[8] %}
                   <a href="{{ url_for('download_music', music_id=music[0]) }}" class="download-link">ダウンロード</a>
                 {% else %}
                   <span>N/A</span>
                 {% endif %}
-              </div>
+              </a>
             </div>
           </li>
           {% endfor %} 
