--- a/templates/index.html
+++ b/templates/index.html
@@ -103,42 +103,41 @@
             <option value=”item5”>項目5</option>
         </select>
         <h3 class="title3">音源時間</h3>
-        <select class="music-length" name="length">
-          <option value="0">指定しない</option>
-          <option value="1">~0:59</option>
-          <option value="2">1:00~1:59</option>
-          <option value="3">2:00~2:59</option>
-          <option value="4">3:00~3:59</option>
-          <option value="5">4:00~4:59</option>
-          <option value="6">5:00~5:59</option>
-          <option value="7">6:00~</option>
+        <select class="music-length" name="length" id="selecter" onchange="filter()">
+          <option value="">指定しない</option>
+          <option value="0">~0:59</option>
+          <option value="1">1:00~1:59</option>
+          <option value="2">2:00~2:59</option>
+          <option value="3">3:00~3:59</option>
+          <option value="4">4:00~4:59</option>
+          <option value="5">5:00~5:59</option>
+          <option value="6">6:00~</option>
         </select>
         <h3 class="title4">サイト</h3>
-        <select class="site" name=”item”>
-            <option value=”item1”>項目1</option>
-            <option value=”item2”>項目2</option>
-            <option value=”item3”>項目3</option>
-            <option value=”item4”>項目4</option>
-            <option value=”item5”>項目5</option>
+        <select class="site" name="source">
+            <option value="1">項目1</option>
+            <option value="2">項目2</option>
+            <option value="3">項目3</option>
+            <option value="4">項目4</option>
         </select>
         <div class="example" style="padding: 5px;">
-          <div class="page "style="display: none;">
+          <div class="page"style="display: none;">
             {% for sound in music %}
               {% if loop.index % 15 == 1 %}
-                <div style="clear:both;"></div>
+                <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
               {% endif %}
-              <div style="float: left; margin: 10px; width: 195px;">
+              <div style="margin: 10px; width: 195px;" class="music-item" data-length="{{sound[5]}}">
                 <table border="1" style="margin-bottom: 10px; width: 210px;">
                   <tr>
                     <td style="width: 45px; height: 45px">logo</td>
                     <td colspan="3" style="width: 150px; background-color: #DEDEDE">{{ sound[1] }}</td>
                   </tr>
                   <tr>
-                    <td colspan="4" style="border: none">作曲者：{{ sound[5] }}</td>
+                    <td colspan="4" style="border: none">作曲者：{{ sound[6] }}</td>
                   </tr>
                   <tr>
                     <td colspan="4" style="border: none">
-                      {% set music_source = sound[6]|lower %}
+                      {% set music_source = sound[7]|lower %}
                       {% if music_source == '1' %}
                         参照元：DOVA
                       {% elif music_source == '2' %}
@@ -155,7 +154,7 @@
                   <tr>
 
                     <td style="border: none;">
-                      <button class="js-detail-modal-button" onclick="openModal('{{ sound[1] }}', '{{ sound[2] }}', '{{ sound[3] }}', '{{ sound[4] }}', '{{ sound[5] }}', '{{ sound[6] }}', '{{ sound[7] }}', '{{ sound[8] }}', '{{ sound[9] }}')">
+                      <button class="js-detail-modal-button" onclick="openModal('{{ sound[1] }}', '{{ sound[2] }}', '{{ sound[3] }}', '{{ sound[4] }}', '{{ sound[6] }}', '{{ sound[7] }}', '{{ sound[8] }}', '{{ sound[9] }}', '{{ sound[10] }}')">
                           詳細
                       </button>
                   </td>
@@ -174,15 +173,14 @@
                   </tr>
                 </table>
               </div>
-              {% if loop.index % 5 == 0 %}
-              <div style="clear:both;"></div>
-              {% endif %}
+
               {% if loop.index % 15 == 0 or loop.last %}
+              </div>
               </div>
               <div class="page" style="display: none;">
               {% endif %}
             {% endfor %}
-            
+
           </div>
           <div id="pagination" style="clear: both;"></div>
           
