テキストエリアを固定しました

--- a/templates/comment.html
+++ b/templates/comment.html
@@ -165,7 +165,7 @@
       <h2>口コミ</h2>
 
       <!-- 口コミを入力するテキストエリア -->
-      <textarea id="review" name="review" rows="10" cols="100" placeholder="(コメントを入力)"></textarea>
+      <textarea style="resize: none;" id="review" name="review" rows="10" cols="100" placeholder="(コメントを入力)"></textarea>
 
       <!-- 評価を格納するための hidden フィールド -->
       <input type="hidden" name="rating" id="rating_input" value="0">
