--- a/templates/top_page.html
+++ b/templates/top_page.html
@@ -315,7 +315,7 @@
     <ul class="menu">
       <li><a href="#">ホーム</a></li>
       <li>
-        <a href="about_the_site.html">MUSIC REEF(ミュージックリーフ)について</a>
+        <a href="{{url_for('about_the_site')}}">MUSIC REEF(ミュージックリーフ)について</a>
       </li>
     </ul>
   </div>
